<resources>
    <string name="app_name">Lost And Found</string>
    <string name="lost">Потерял</string>
    <string name="found">Нашел</string>
    <string name="profile">Профиль</string>
    <string name="more_int_about_lost_location">Локация</string>
    <string name="more_int_about_lost_date">Дата пропажи</string>
    <string name="more_inf_about_lost_decription">Описание</string>
    <string name="more_inf_about_lost_number">Номер связи</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_up">Регистрация</string>
    <string name="email_registration">Ваша почта</string>
    <string name="password_registration">Пароль</string>
    <string name="name_sign_up">Имя</string>
    <string name="phone_number_sign_up">Номер телефона(по желанию)</string>
    <string name="registration_button_sign_up">Зарегестрироваться</string>
    <string name="tv_enter_log_in">Вход</string>
    <string name="tv_enter_dop_log_in">на портал потерянных, найденных вещей</string>
    <string name="et_registration_sign_up">Регистрация</string>
    <string name="map">Карта</string>
    <string name="aaf_header">Заголовок</string>
    <string name="aaf_description">Описание</string>
    <string name="tv_aaf_phone">Телефон</string>
    <string name="aaf_found_date">Дата нахождения</string>
    <string name="aaf_send">Отправить</string>
    <string name="profile_details">Детали профиля</string>
    <string name="profile_exit">Выход</string>
    <string name="name_registration">Имя</string>
    <string name="all_lost_date">Дата потери</string>
    <string name="take_photo">Загрузить фото</string>
    <string name="et_name">Имя</string>
    <string name="til_header">Заголовок</string>
    <string name="name">Имя</string>
    <string name="open_map">Открыть карту</string>
    <string name="delete">Удалить</string>
</resources>
